Update 'buwptnhbf-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:82dcf8cca75053d925b1003b3bafc806c9ba912e@sha256:7e1d1c00855276e8b3307a8483bab31eb9516cede8064cc2b3bb8e7b5695163f

--- a/components/buwptnhbf-python/overlays/development/deployment-patch.yaml
+++ b/components/buwptnhbf-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: buwptnhbf-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:82dcf8cca75053d925b1003b3bafc806c9ba912e@sha256:7e1d1c00855276e8b3307a8483bab31eb9516cede8064cc2b3bb8e7b5695163f
+          name: container-image
